# ProjectMemoryMCP

./: .gitignore  README.md  RESEARCH_REPORT.md
project-memory-mcp/: AGENT_SETUP.md  GIT_STRATEGY.md  README.md  alembic.ini  config.json.example  config.yaml  config.yaml.example  package.json  pyproject.toml
project-memory-mcp/scripts/: _debug_one.py  run_analysis_loop.py
project-memory-mcp/src/project_memory_mcp/: __init__.py  server.py
project-memory-mcp/src/project_memory_mcp/cli/: __init__.py
project-memory-mcp/src/project_memory_mcp/db/: __init__.py  connection.py  models.py
project-memory-mcp/src/project_memory_mcp/db/migrations/: env.py
project-memory-mcp/src/project_memory_mcp/llm_analysis/: __init__.py  analyzer.py  schemas.py
project-memory-mcp/src/project_memory_mcp/mcp_tools/: __init__.py  edit.py  manual.py  memory.py  query.py
project-memory-mcp/src/project_memory_mcp/server/: __init__.py
project-memory-mcp/src/project_memory_mcp/static_analysis/: __init__.py  ast_queries.py  file_scanner.py  language_registry.py  parallel_analysis.py  static_locator.py
project-memory-mcp/src/project_memory_mcp/utils/: __init__.py  config.py  errors.py  hashing.py  staleness_checker.py
project-memory-mcp/src/project_memory_mcp/workflows/: __init__.py  apply_edit.py  background_analysis.py  delete_safety.py  generate_manual.py  impact_analysis.py  index_repository.py  propose_edit.py  rescan_changed_files.py  write_agent_guide.py
project-memory-mcp/tests/: test_all.py  test_analysis_submission_dedup.py
references/axon/: url.txt
references/code-context-engine/: url.txt
references/codebase-memory-mcp/: url.txt
references/krusch-context-mcp/: url.txt
references/serena/: url.txt
