[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-memory-mcp"
version = "0.1.0"
description = "A project-local, LLM-driven knowledge graph MCP server for safe code understanding, equation tracking, impact analysis, and agent-assisted editing."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Project Memory MCP Contributors", email = "dev@project-memory-mcp.dev"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "alembic>=1.13.0",
    "instructor>=1.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.22.0",
    "tree-sitter-javascript>=0.22.0",
    "tree-sitter-typescript>=0.22.0",
    "tree-sitter-rust>=0.22.0",
    "tree-sitter-go>=0.22.0",
    "tree-sitter-java>=0.22.0",
    "tree-sitter-c>=0.22.0",
    "tree-sitter-cpp>=0.22.0",
    "jedi>=0.19.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "watchfiles>=0.21.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "pyright>=1.1.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "pre-commit>=3.0.0",
]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
]

[project.scripts]
project-memory = "project_memory_mcp.cli:app"
project-memory-mcp = "project_memory_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/project_memory_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "UP", "W", "C90", "PTH", "ERA", "PD", "PL", "T20", "TID", "NPY"]
ignore = ["ERA001", "T201", "T203"]
fixable = ["E", "F", "I", "UP", "W", "C90", "PTH", "ERA", "PD", "PL", "T20", "TID", "NPY"]
unfixable = []

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "ERA001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportMissingImports = true
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedFunction = true
reportImplicitStringConcatenation = true
reportDeprecated = true
include = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test*"]

[tool.coverage.run]
source = ["src/project_memory_mcp"]
omit = ["tests/*", "*/migrations/*"]

[tool.alembic]
script_location = "src/project_memory_mcp/db/migrations"
prepend_sys_path = "."
